[build-system]
requires = ["jupyter_packaging~=0.7.0", "setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "nanohub-remote"
license = {text = "BSD License"}
dependencies = [
    "fs>=2.4.0",
]
authors = [
    {name = "Daniel Mejia", email = "dmejiapa@purdue.edu"}
]
maintainers = [
    {name = "Daniel Mejia", email = "dmejiapa@purdue.edu"}
]
readme = "README.md"
dynamic = ["version", "description"]
