[build-system]
requires = ["jupyter_packaging~=0.7.0", "setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "nanohub-remote"
license = {text = "MIT"}
dependencies = [
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "fs>=2.4.0",
    "numpy>=1.20.0",
    "pint>=0.18",
    "simtool",
]
authors = [
    {name = "Daniel Mejia", email = "dmejiapa@purdue.edu"}
]
maintainers = [
    {name = "Daniel Mejia", email = "dmejiapa@purdue.edu"}
]
readme = "README.md"
dynamic = ["version", "description"]
keywords = ["nanohub", "api", "simulation", "research", "scientific-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/denphi/nanohub-remote"
Documentation = "https://github.com/denphi/nanohub-remote/blob/master/README.md"
Repository = "https://github.com/denphi/nanohub-remote"
Issues = "https://github.com/denphi/nanohub-remote/issues"
